k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bs-api
  labels:
    app: bs-api
    environment: ${ENVIRONMENT}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bs-api
      environment: ${ENVIRONMENT}
  template:
    metadata:
      labels:
        app: bs-api
        environment: ${ENVIRONMENT}
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
        - name: bs-api
          image: "${BS_API_IMAGE}"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bs-api
  labels:
    app: bs-api
    environment: ${ENVIRONMENT}
spec:
  selector:
    app: bs-api
    environment: ${ENVIRONMENT}
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
