k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bs-app
  labels:
    app: bs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bs-app
  template:
    metadata:
      labels:
        app: bs-app
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
        - name: bs-app
          image: "${BS_APP_IMAGE}"
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: bs-app
  labels:
    app: bs-app
spec:
  selector:
    app: bs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
