k8s/staging-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-bs-api
  labels:
    app: staging-bs-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staging-bs-api
  template:
    metadata:
      labels:
        app: staging-bs-api
    spec:
      containers:
        - name: staging-bs-api
          image: placeholder # ← placeholder, перезаписывается через CI
          ports:
            - containerPort: 443
          volumeMounts:
            - name: cert-volume
              mountPath: /certs
              readOnly: true
      volumes:
        - name: cert-volume
          secret:
            secretName: bs-cert
---
apiVersion: v1
kind: Service
metadata:
  name: staging-bs-api
  labels:
    app: staging-bs-api
spec:
  selector:
    app: staging-bs-api
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
