k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.staging.book-sharing.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-bs-api
                port:
                  number: 443
