k8s/production-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.book-sharing.ru
      secretName: bs-tls-cert
  rules:
    - host: api.book-sharing.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bs-api
                port:
                  number: 80
